# Planapp-Public

./: .gitignore  app.py  pyproject.toml  readme.md
data/evaluation/: avaliacao_final.csv  metricas_final.txt  preds_embeddings.json  preds_embeddings_bge_m3.json  preds_embeddings_e5.json  preds_embeddings_labse.json  preds_embeddings_stsb.json  preds_llm_llm_1b.json  preds_llm_llm_3b.json  preds_llm_llm_8b.json  preds_llm_mistral_base.json  preds_silver.json  preds_tfidf.json  tabela_comparativa.csv
dev/: Sprint-01_backlog_ends-2025-10-07.md  Sprint-02_backlog_ends-2025-10-24.md  Sprint-03_backlog_ends-2025-11-04.md  Sprint-04_backlog_end-18-11.md  python-projeto.md
docs/: links.md  medallion system.md  taxonomia.md
src/: avaliar.py  embeddings_bge_m3.py  embeddings_descricoes.py  embeddings_e5.py  embeddings_e5_instruct.py  embeddings_labse.py  embeddings_stsb.py  ingest.py  llm_base_mistral.py  llm_ollama.py  predict_silver.py  tfidf_descricoes.py  write_silver.py
src/notebooks/: 10noticias_categoria.py  20noticias_categoria.py  Planapp_sprint1.ipynb  Planapp_sprint2.ipynb  Planapp_sprint3mais4.ipynb  Planapp_sprint4.ipynb  Planapp_sprint5.py  sprint6.py
